=> Agregado gorm a la cenexion. => Agregado variables de entorno para db. x => falta que funcionen.

--- a/src/github.com/paletgerardo/go-app-resto/.env
+++ b/src/github.com/paletgerardo/go-app-resto/.env
@@ -1,1 +1,7 @@
 CLAVETOKEN:ClaveSecreta_ParaLaFirma_JWT_gerrDev9003..
+USERDB:gerrdev
+PASSDB:9003
+HOSTDB:127.0.0.1
+PORTDB:5432
+DBNAME:restodb
+PORT:3000
