--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@ HOSTDB:ec2-35-174-118-71.compute-1.amazonaws.com
 PORTDB:5432
 DBNAME:d2ch7fcu9q8og7
 PORT:3000
+
+#USERDB:gerrdev
+#PASSDB:9003
+#HOSTDB:127.0.0.1
+#PORTDB:5432
+#DBNAME:restodb
+#PORT:3000
